add annotations for validations and fields controls