@@ -26,7 +26,6 @@ import cds.gen.travelservice.BookingSupplement_;
 import cds.gen.travelservice.TravelDraftActivateContext;
 import cds.gen.travelservice.Travel;
 import cds.gen.travelservice.TravelService_;
-import cds.gen.travelservice.TravelStatus;
 import cds.gen.travelservice.Travel_;
 
 @Component
@@ -76,15 +75,10 @@ public class CreationHandler implements EventHandler {
 	@Before(event = { CqnService.EVENT_CREATE, CqnService.EVENT_UPDATE }, entity = Travel_.CDS_NAME)
 	public void checkTravelEndDateIsAfterBeginDate(Travel travel) {
 		if(travel.beginDate() != null && travel.endDate() != null) {
-			if (travel.beginDate().isAfter(travel.endDate())) {
-				throw new IllegalTravelDateException("error.travel.date.illegal", travel.travelID(),
-						travel.beginDate(), travel.endDate());
-			}
-
-			if (travel.beginDate().isBefore(LocalDate.now().atStartOfDay().toLocalDate())) {
-				throw new IllegalTravelDateException("error.travel.date.past", travel.travelID(),
-						travel.beginDate());
-			}
+		//	if (travel.beginDate().isBefore(LocalDate.now().atStartOfDay().toLocalDate())) {
+		//		throw new IllegalTravelDateException("error.travel.date.past", travel.travelID(),
+		//				travel.beginDate());
+		//}
 		}
 	}
 
@@ -116,7 +110,7 @@ public class CreationHandler implements EventHandler {
 					List<BookingSupplement> bookingSupplementsWithoutIds = bookingSupplements.stream()
 							.filter(bookingSupplement -> bookingSupplement.bookingSupplementID() == null
 									|| bookingSupplement.bookingSupplementID() == 0)
-							.collect(Collectors.toList());
+							.toList();
 
 					Integer currentMaxBookingSupplementId = bookingSupplements.stream()
 							.filter(bs -> Objects.nonNull(bs.bookingSupplementID()))
@@ -132,7 +126,7 @@ public class CreationHandler implements EventHandler {
 	private void addBookingIds(Travel travel) {
 		List<Booking> bookingsWithoutId = travel.toBooking().stream()
 				.filter(booking -> booking.bookingID() == null || booking.bookingID() == 0)
-				.collect(Collectors.toList());
+				.toList();
 
 		Integer currentMaxBookingId = travel.toBooking().stream()
 				.filter(booking -> Objects.nonNull(booking.bookingID()))
